[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "SSH Multiplexing"
documentation = "http://rustyhorde.github.io/mussh"
edition = "2018"
homepage = "http://rustyhorde.github.io/mussh"
keywords = ["mussh", "ssh"]
license = "MIT/Apache-2.0"
name = "mussh"
readme = "README.md"
repository = "https://github.com/rustyhorde/mussh"
version = "3.1.1"

[dependencies]
chrono = "0"
clap = "2"
dirs = "1"
getset = "0"
libmussh = "1"
rusqlite = "0"
slog-async = "2"
slog-term = "2"
slog-try = "0"

[dependencies.slog]
features = ["max_level_trace", "release_max_level_trace"]
version = "2"
