[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "SSH Multiplexing"
documentation = "http://rustyhorde.github.io/mussh"
edition = "2018"
homepage = "http://rustyhorde.github.io/mussh"
keywords = ["mussh", "ssh"]
license = "MIT/Apache-2.0"
name = "mussh"
readme = "README.md"
repository = "https://github.com/rustyhorde/mussh"
version = "3.1.3"

[dependencies]
chrono = "0.4.23"
clap = "2.34.0"
dirs = "1.0.5"
getset = "0.1.2"
libmussh = "1.1.4"
rusqlite = "0.28.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-try = "1.0.1"

[build-dependencies]
rustversion = "1.0.9"
